--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
 /* вторичний колір фону #F5F4FA */
 /* колір фону героя і футера #2F303A */
 /* колір рамки #EEEEEE */
+/* колір іконок соц мереж #AFB1B8 */
+/* колір фону іконок в футері rgba(255, 255, 255, 0.1); */
 
 html {
     box-sizing: border-box;
@@ -24,6 +26,8 @@ html {
     --hero-bg-color: #2F303A;
     --black-color: #000000;
     --border-color: #EEEEEE;
+    --social-icon-color: #AFB1B8;
+    --bg-icon-color:  rgba(255, 255, 255, 0.1);
 }
 
 body  {
@@ -58,6 +62,12 @@ img{
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.section-title-hidden {
+    appearance: none;
+    opacity: 0;
+    position: absolute;
 }
 
 /* HEADER */
@@ -132,6 +142,9 @@ img{
 }
 
 .contact-list .link {
+    display: flex;
+    align-items: center;
+
     color: var(--secondary-text-color);
     
     text-decoration: none;
@@ -139,11 +152,31 @@ img{
     line-height: 1.14;
     letter-spacing: 0.02em;
 }
+
+
+.icon-mail {
+    margin-right: 10px;
+    width: 16px;
+    height: 12px;
+    fill: var(--secondary-text-color);
+}
+
+.icon-phone {
+    margin-right: 10px;
+    width: 10px;
+    height: 16px;
+    fill: var(--secondary-text-color);
+}
+
 .contact-list .link:hover,
 .contact-list .link:focus {
     color: var(--accent);
 }
 
+.contact-list .link:hover > svg,
+.contact-list .link:focus > svg {
+    fill: var(--accent);
+}
 /* hero */
 
 .hero {
@@ -181,6 +214,12 @@ img{
 }
     
 .hero .hero-button {
+    padding: 0px;
+    width: 200px;
+    height: 50px;
+    border: none;
+    border-radius: 4px;
+
     background-color: var(--accent);
     color: var(--primary-white-color);
 
@@ -216,17 +255,20 @@ img{
     margin-right: 30px;
 }
 
-/* .container-icon {
+.icon-bg {
     margin-bottom: 30px;
     width: 270px;
     height: 120px;
     background-color: var(--secondary-bg-color);
-} */
+    padding-top: 25px;
+    padding-bottom: 25px;
+    text-align: center;
+} 
  
-/* .feature-icon {
+.icon-feature {
 width: 70px;
 height: 70px;
-} */
+} 
 
 .feature-list .title {
     margin-bottom: 10px;
@@ -262,12 +304,20 @@ height: 70px;
     margin-right: 30px;
 }
 
+/* Команда */
+
 .team{
     background-color: var(--secondary-bg-color);
 }
 
 .team-list {
     display: flex;
+    padding-bottom: 30px;
+}
+
+.team-list .item {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;    
 }
 
 .team-list .item:not(:last-child) {
@@ -299,6 +349,81 @@ height: 70px;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
+}
+
+/* icon team */
+.social-list {
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+}
+
+.link-item:not(:last-child)  {
+    margin-right: 10px;
+}
+
+.social-link {
+    display: inline-block;
+    padding: 12px;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+}
+
+.social-icon {
+    fill: var(--social-icon-color);
+    width: 20px;
+    height: 20px;
+
+}
+
+.social-link:hover,
+.social-link:focus {
+    background-color: var(--accent);
+}
+
+.social-link:hover > svg,
+.social-link:focus > svg {
+    fill: var(--primary-white-color);
+}
+
+/* Постійні клієнти */
+.client-list {
+    display: flex;
+    justify-content: center;
+}
+
+.client-logo:not(:last-child)  {
+    margin-right: 30px;
+}
+
+.client-link {
+    display: inline-block;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    width: 170px;
+    height: 92px;
+    border: 1px solid var(--social-icon-color);
+    box-sizing: border-box;
+    border-radius: 4px;
+    text-align: center;
+    
+}
+
+.client-icon {
+    width: 106px;
+    height: 60px;
+    fill: var(--social-icon-color);
+}
+
+.client-link:hover > svg,
+.client-link:focus > svg {
+    fill: var(--accent);
+}
+
+.client-link:hover,
+.client-link:focus{
+    border-color: var(--accent);
 }
 
 /* footer */
@@ -336,6 +461,54 @@ height: 70px;
     color: var(--accent);
 }
 
+.title-footer {
+    font-size: inherit;
+    font-weight: 700;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: var(--primary-white-color);
+}
+
+.flex-footer {
+    display: flex;
+    align-items: baseline;
+}
+
+.social-blok {
+    margin-left: 70px;
+
+}
+
+.footer-social {
+    display: flex;
+    margin-top: 20px;
+    justify-content: center;
+}
+
+.item-social:not(:last-child)  {
+    margin-right: 10px;
+}
+
+.footer-link {
+    display: inline-block;
+    padding: 12px;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: var(--bg-icon-color);
+}
+
+.footer-icon {
+    width: 20px;
+    height: 20px;
+    fill: var(--primary-white-color);
+}
+
+.footer-link:hover,
+.footer-link:focus {
+background-color: var(--accent);
+}
+
 /* -------- PORTFOLIO --------- */
 
 .menu-list {
@@ -349,10 +522,12 @@ height: 70px;
 }
 
 .menu-list .button {
+    padding: 6px 22px;
     border: none;
     border-radius: 4px;
     background-color: var(--secondary-bg-color);
     color: inherit;
+
     
 
     font-family: inherit;
@@ -380,6 +555,12 @@ height: 70px;
 .example-list .item {
     flex-basis: 370 px;
     margin: 15px;
+}
+
+.example-list .item:hover,
+.example-list .item:focus{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
 }
 
 .example-list .works {
